# passit

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  lefthook.yml  repomix-output.xml  repomix.config.json  smithery.yaml
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: architecture.md  compaction.md
src/: config.rs  lib.rs  main.rs  server.rs
src/acp/: server.rs
src/db/: database.rs  facts.rs  messages.rs  mod.rs  sessions.rs  transfers.rs
src/history/: claude.rs  gemini.rs  mod.rs  opencode.rs
src/tools/: branch.rs  convert.rs  export_tool.rs  import_tool.rs  list.rs  load.rs  mod.rs  save.rs  scan.rs  search.rs  status.rs  summary.rs  trim.rs
tests/: tool_integration.rs
