[package]
name = "passit"
version = "1.0.1"
description = "pass conversations between AI agents — grab, drop, and continue seamlessly"
license = "MIT"
edition = "2024"
authors = ["himanshu007-creator"]
homepage = "https://github.com/himanshu007-creator/passit"
repository = "https://github.com/himanshu007-creator/passit"
readme = "README.md"
keywords = ["mcp", "session", "agent", "ai", "claude-code", "opencode", "continuity"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
rmcp = { version = "1.7", features = ["server", "transport-io", "macros", "elicitation", "schemars"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
ulid = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "1.2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
